--- a/styles/style.css
+++ b/styles/style.css
@@ -59,12 +59,18 @@ body {
 }
 
 .header {
+  height: 100px;
+  overflow: hidden; /*to hide the overflow of logo outside the header*/
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 80px;
   background: #e3e6f3;
-  box-shadow: 0 5px 15px rgb(0, 0, 0, 0.06);
+  box-shadow: 0 5px 25px rgb(223, 223, 223);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 
 .header .navbar {
@@ -86,6 +92,8 @@ body {
   color: #1a1a1a;
 }
 
-.navbar a:hover {
+.navbar a:hover,
+.navbar a.active {
   color: red;
+  transition: 0.3s ease;
 }
