displayed feeatured products using javascript

--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -42,8 +42,8 @@ body {
 
 .welcome {
   font-size: 30px;
-  font-weight: 500;
-  color: red;
+  font-weight: 700;
+  color: #282828;
 }
 
 .credential {
