--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,3 +1,7 @@
+/* .hero{
+  background: rgb(240, 240, 240);
+} */
+
 .hero img {
   height: 80vh;
 }
@@ -7,6 +11,7 @@
   justify-content: space-between;
   padding: 20px 80px;
   align-items: center;
+  background: #f4f5f8;
 }
 
 .hero-content {
