--- a/styles/home prducts.css
+++ b/styles/home prducts.css
@@ -14,7 +14,9 @@
 .prev1,
 .next1,
 .prev2,
-.next2 {
+.next2,
+.prev3,
+.next3 {
   position: absolute;
   top: 50%;
   background-color: rgb(205, 205, 205);
@@ -26,30 +28,35 @@
 }
 
 .next1:hover,
-.next2:hover {
+.next2:hover,
+.next3:hover {
   cursor: pointer;
   opacity: 1;
 }
 
 .prev1:hover,
-.prev2:hover {
+.prev2:hover,
+.prev3:hover {
   cursor: pointer;
   opacity: 1;
 }
 
 .prev1,
-.prev2 {
+.prev2,
+.prev3 {
   left: 10px;
   transform: rotate(180deg);
 }
 
 .next1,
-.next2 {
+.next2,
+.next3 {
   right: 10px;
 }
 
 .featured-product-list,
-.Customizable-product-list {
+.Customizable-product-list,
+.Bestseller-product-list{
   display: flex;
   justify-content: space-between;
   gap: 40px;
